[gd_scene load_steps=3 format=3 uid="uid://upgrade_screen_001"]

[ext_resource type="Script" path="res://scenes/ui/upgrade_screen.gd" id="1_upgrade"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.8)

[node name="UpgradeScreen" type="CanvasLayer"]
script = ExtResource("1_upgrade")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Se√ß"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 300)

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Devam Et"
disabled = true

